bug-fix: opera translate + z-index

--- a/web-ui/src/app/home/home.component.css
+++ b/web-ui/src/app/home/home.component.css
@@ -10,5 +10,6 @@
 #home-title-container {
     position: relative;
     top: 50%;
+    -webkit-transform: translateY(-65%);
     transform: translateY(-65%);
 }
